[package]
name = "supermarket"
version = "0.1.0"
authors = ["Lachezar Lechev <lachezar@adex.network>"]
edition = "2018"

[dependencies]
# TODO: Change the branch to `dev`
primitives = { git = "https://github.com/AdExNetwork/adex-validator-stack-rust", branch = "ipfs-slog-value-impl" }
# we use the default features, except the `oldtime` one, which is on by default and is not needed
chrono = { version = "0.4", features = ["clock", "std"] }
futures = { version = "0.3" }
async-trait = { version = "^0.1" }
thiserror = "^1.0"

# Server
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
tokio-stream = { version = "0.1", features = ["time"] }
hyper-tls = "0.5"
hyper = { version = "0.14", features = ["server", "client", "stream", "http2", "runtime"] }
http = "0.2"

reqwest = { version = "0.11", features = ["json", "cookies"] }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_urlencoded = "0.7"

# CLI
clap = "2.33"
toml = "0.5"

# Logging
slog = { version = "2.7", features = ["release_max_level_info"] }
slog-term = "2.6"
slog-async = "2.6"
# Other
lazy_static = "1.4"
url = { version = "2.2", features = ["serde"]}
dashmap = { version = "4" }
# UA parsing
woothee = "^0.11"

[dev-dependencies]
wiremock = "0.4"
pretty_assertions = "^0.6"
